# teambattles

./: README.md
docs/: calendar.mdx  challenges.mdx  custom.css  dashboard.mdx  docs.json  index.mdx  quickstart.mdx  tutorials.mdx
docs/account/: connections.mdx  livestream.mdx  profile.mdx  xp.mdx
docs/achievements/: categories.mdx  index.mdx  onboarding.mdx
docs/api-reference/: openapi.json
docs/chat/: index.mdx  messages.mdx  settings.mdx
docs/developers/: api-reference.mdx  authentication.mdx  game-developer-api.mdx  idempotency.mdx  index.mdx  league-operator-api.mdx  match-lifecycle.mdx  personal-api.mdx  platform-tools.mdx  public-read-api.mdx  rate-limits.mdx  score-submission.mdx  webhooks-api.mdx  webhooks.mdx
docs/discovery/: index.mdx  matches.mdx
docs/games/: cod-bo6.mdx  cod-bo7.mdx  cs2.mdx  index.mdx  league-of-legends.mdx  valorant.mdx
docs/leagues/: admin.mdx  discover.mdx  index.mdx  joining.mdx  leaderboards.mdx  profiles.mdx  rules.mdx  seasons.mdx
docs/legal/: privacy.mdx  security.mdx  terms.mdx
docs/matches/: accepting.mdx  create.mdx  index.mdx  scores.mdx  settings.mdx
docs/notifications/: index.mdx  subscriptions.mdx
docs/operations/: bot-runbook.md  status-monitoring.md
docs/organizations/: create.mdx  index.mdx  invites.mdx  members.mdx
docs/reference/: glossary.mdx  index.mdx  troubleshooting.mdx
docs/referrals/: index.mdx
docs/sdks/: csharp.mdx  dart.mdx  go.mdx  index.mdx  java.mdx  (+4 more)
sdks/: QUARANTINE.md
sdks/python/: README.md  build.sh  pyproject.toml
sdks/python/teambattles_sdk/: __init__.py  client.py
(+203 files in other folders)
