[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teambattles-sdk"
version = "0.1.0"
description = "Official Python SDK for the TeamBattles public developer API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "TeamBattles" }]
dependencies = [
    "microsoft-kiota-abstractions>=1.0.0",
    "microsoft-kiota-http>=1.0.0",
    "microsoft-kiota-serialization-json>=1.0.0",
    "microsoft-kiota-serialization-text>=1.0.0",
    "microsoft-kiota-serialization-form>=1.0.0",
    "microsoft-kiota-serialization-multipart>=1.0.0",
]

[project.urls]
Homepage = "https://teambattles.gg"
Documentation = "https://teambattles.gg/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["teambattles_sdk*"]
